@@ -6,7 +6,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.batch.core.configuration.annotation.StepScope;
 import org.springframework.batch.item.ItemReader;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -14,22 +13,18 @@ import org.springframework.stereotype.Service;
 public class DeleteRecordReader implements ItemReader<DeleteData> {
     private final Logger logger = LoggerFactory.getLogger(DeleteRecordReader.class);
 
-    @Autowired
-    private DeleteRecordService deleteRecordService;
+    private final DeleteRecordService deleteRecordService;
 
     private GDDUResponse deleteData;
     private boolean hasNext;
     private boolean firstRequestSent;
     private int nextPage;
     private boolean pageable;
-//    private int nextSize;
-//    private Long size = 0L;
-//    private String jobBatchId;
-//    private String jobStartTime;
-//    private String recordClass;
-//    private String controlNumber;
-//    private String batchId;
     private int count=0;
+
+    public DeleteRecordReader(DeleteRecordService deleteRecordService) {
+        this.deleteRecordService = deleteRecordService;
+    }
 
     @Override
     public DeleteData read() {
@@ -43,7 +38,7 @@ public class DeleteRecordReader implements ItemReader<DeleteData> {
         }
         DeleteData nextDelete = null;
         if (deleteData != null && !deleteData.getContent().isEmpty()) {
-            nextDelete = deleteData.getContent().remove(0);
+            nextDelete = deleteData.getContent().removeFirst();
         }
         return nextDelete;
     }
